# angular

./: package.json
aio/: firebase.json
aio/tests/deployment/shared/: URLS_TO_REDIRECT.txt
devtools/projects/ng-devtools-backend/src/lib/: BUILD.bazel  client-event-subscribers.ts  component-tree.ts  router-tree.ts
devtools/projects/ng-devtools/src/lib/: devtools.component.scss
devtools/projects/ng-devtools/src/lib/application-operations/: index.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/: devtools-tabs.component.html  devtools-tabs.component.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/: BUILD.bazel  directive-explorer.component.html  directive-explorer.component.ts  directive-explorer.module.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/directive-forest/: directive-forest.component.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/injector-graph/: BUILD.bazel  injector-graph.component.html  injector-graph.component.scss  injector-graph.component.ts  injector-graph.module.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/property-resolver/: directive-property-resolver.ts  element-property-resolver.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/property-tab/: property-tab.component.html  property-tab.component.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/property-tab/property-view/: property-tab-body.component.html  property-tab-body.component.ts  property-view-body.component.html  property-view-body.component.scss  property-view-body.component.ts  property-view.component.html  property-view.component.ts  property-view.module.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/injector-tree/: BUILD.bazel  injector-tree-graph.ts  injector-tree.component.html  injector-tree.component.scss  injector-tree.component.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/router-tree/: router-tree.component.html  router-tree.component.scss  router-tree.component.ts  router-tree.module.ts
devtools/projects/protocol/src/lib/: messages.ts
devtools/projects/shell-browser/src/: index.html
devtools/projects/shell-browser/src/app/: chrome-application-operations.ts  chrome-window-extensions.ts
devtools/src/: demo-application-operations.ts  index.html
devtools/src/app/: app.component.html  app.component.ts  app.module.ts
devtools/src/app/demo-app/: BUILD.bazel  demo-app.module.ts
devtools/src/app/demo-app/sample-one/: BUILD.bazel  child-five.component.ts  child-four.component.ts  child-one.component.ts  child-six.component.ts  child-three.component.ts  child-two.component.ts  di-tree.component.ts  sample-one.component.html  sample-one.component.scss  sample-one.component.spec.ts  sample-one.component.ts  sample-one.module.ts
devtools/src/app/demo-app/sample-one/services/: BUILD.bazel  service1.ts  service2.ts  service3.ts  service4.ts
devtools/src/app/demo-app/todo/: BUILD.bazel  app-todo.component.html  app-todo.component.ts  app.module.ts
devtools/src/app/demo-app/todo/di/: Build.bazel  di.components.ts  di.module.ts  di.services.ts
devtools/src/app/demo-app/todo/home/: home.module.ts  todo.component.ts  todos.component.html  todos.component.ts  tooltip.directive.ts
devtools/src/app/demo-app/todo/routes/: BUILD.bazel  routes.component.ts  routes.module.ts  standalone-route.component.ts
devtools/src/app/devtools-app/: devtools-app.component.html  devtools-app.component.scss
